# inbreeding

./: .gitignore  README.md  README.rst  example.json  example.json.annotated  flake.nix  inbreeding.py  main.py  partialSelfing.py  pop2phase.py  pyproject.toml  setup.py  trajectory.py
back.sim/: driver.py  samples.py  simulator.py
doc/: inbreedingFdSimDesign.tex  partialSelfingFwdSimDesign.tex  simulator_design.tex
examples/: androdioecy.composite.json  androdioecy.fundamental.json  example.json  example.json.annotated  gynodioecy.composite.json  gynodioecy.fundamental.json  pure-hermaphroditism.composite.json  pure-hermaphroditism.fundamental.json
inbreeding/: partialSelfing.py  pop2phase.py  summarize.py  utility.py
inbreeding/test/: pop2phase_test.py  summarize_test.py  utility_test.py
partial_selfing/: .gensamples.py.swp  common.py  gensamples.py  infinite_alleles.py  infinite_sites.py  p2rmes.py  phase.py  post_process.py  quality_control.py  summary.py
partial_selfing/funcs/: common.py  db.py  infinite_alleles.py  infinite_sites.py
partial_selfing/many_loci/: infinite_alleles.py  infinite_sites.py
partial_selfing/test/: test_record_selfing_infinite_alleles.py  test_record_selfing_infinite_sites.py
partial_selfing/two_loci/: infinite_alleles.py  infinite_sites.py
selfingsim/: __init__.py  analyze.py  common.py  convert.py  data.py  infinite_alleles.py  infinite_sites.py  sample.py  simulate.py  utils.py
selfingsim/test/: test_record_selfing_infinite_alleles.py  (+1 more)
src/: partialSelfing.py  pop2phase.py  summarize.py  utility.py
(+3 files in other folders)
